correct fix for Android (overflow: initial on html)

--- a/css/arkusz.css
+++ b/css/arkusz.css
@@ -64,7 +64,7 @@ body {
 }
 
 .fix-Android {
-	overflow: hidden;
+	overflow: initial;
 }
 
 .clearfix {
